--- a/Soumya_Team_3_Capstone_Project.ipynb
+++ b/Soumya_Team_3_Capstone_Project.ipynb
@@ -2092,7 +2092,7 @@
         "id": "7qGS-NCxXL_C"
       },
       "source": [
-        ""
+        "This is sample line"
       ],
       "execution_count": null,
       "outputs": []
