--- a/Soumya_Team_3_Capstone_Project.ipynb
+++ b/Soumya_Team_3_Capstone_Project.ipynb
@@ -2103,15 +2103,294 @@
         "id": "4jJ1Q7Z7XMFE"
       },
       "source": [
-        ""
+        "working_directory = '/content/drive/My Drive/AlmaBetter/CohortAravali/Cohort Aravali/Module 2/Capstone-1/'\n",
+        "most_runs_average_strikerate_df = pd.read_csv(working_directory + 'most_runs_average_strikerate.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NJlxXnpeXLwq"
+        "id": "NJlxXnpeXLwq",
+        "outputId": "a7eee18e-3df9-4a9e-fec9-056cff0096eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        }
+      },
+      "source": [
+        "most_runs_average_strikerate_df.head()"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>batsman</th>\n",
+              "      <th>total_runs</th>\n",
+              "      <th>out</th>\n",
+              "      <th>numberofballs</th>\n",
+              "      <th>average</th>\n",
+              "      <th>strikerate</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>V Kohli</td>\n",
+              "      <td>5426</td>\n",
+              "      <td>152</td>\n",
+              "      <td>4111</td>\n",
+              "      <td>35.697368</td>\n",
+              "      <td>131.987351</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>SK Raina</td>\n",
+              "      <td>5386</td>\n",
+              "      <td>160</td>\n",
+              "      <td>3916</td>\n",
+              "      <td>33.662500</td>\n",
+              "      <td>137.538304</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>RG Sharma</td>\n",
+              "      <td>4902</td>\n",
+              "      <td>161</td>\n",
+              "      <td>3742</td>\n",
+              "      <td>30.447205</td>\n",
+              "      <td>130.999466</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>DA Warner</td>\n",
+              "      <td>4717</td>\n",
+              "      <td>114</td>\n",
+              "      <td>3292</td>\n",
+              "      <td>41.377193</td>\n",
+              "      <td>143.286756</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>S Dhawan</td>\n",
+              "      <td>4601</td>\n",
+              "      <td>137</td>\n",
+              "      <td>3665</td>\n",
+              "      <td>33.583942</td>\n",
+              "      <td>125.538881</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     batsman  total_runs  out  numberofballs    average  strikerate\n",
+              "0    V Kohli        5426  152           4111  35.697368  131.987351\n",
+              "1   SK Raina        5386  160           3916  33.662500  137.538304\n",
+              "2  RG Sharma        4902  161           3742  30.447205  130.999466\n",
+              "3  DA Warner        4717  114           3292  41.377193  143.286756\n",
+              "4   S Dhawan        4601  137           3665  33.583942  125.538881"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9G1_g73Mw_Xa",
+        "outputId": "db87b18e-e658-4489-af32-39771de46121",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 294
+        }
+      },
+      "source": [
+        "most_runs_average_strikerate_df.describe()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>total_runs</th>\n",
+              "      <th>out</th>\n",
+              "      <th>numberofballs</th>\n",
+              "      <th>average</th>\n",
+              "      <th>strikerate</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>516.000000</td>\n",
+              "      <td>516.000000</td>\n",
+              "      <td>516.000000</td>\n",
+              "      <td>482.000000</td>\n",
+              "      <td>516.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>430.625969</td>\n",
+              "      <td>17.063953</td>\n",
+              "      <td>335.645349</td>\n",
+              "      <td>16.355074</td>\n",
+              "      <td>105.433442</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>882.275431</td>\n",
+              "      <td>28.124511</td>\n",
+              "      <td>663.593679</td>\n",
+              "      <td>11.146222</td>\n",
+              "      <td>39.633938</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>15.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>17.000000</td>\n",
+              "      <td>8.000000</td>\n",
+              "      <td>84.362069</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>74.000000</td>\n",
+              "      <td>5.500000</td>\n",
+              "      <td>68.000000</td>\n",
+              "      <td>14.607143</td>\n",
+              "      <td>111.651584</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>340.500000</td>\n",
+              "      <td>18.000000</td>\n",
+              "      <td>290.000000</td>\n",
+              "      <td>23.657609</td>\n",
+              "      <td>130.499036</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>5426.000000</td>\n",
+              "      <td>161.000000</td>\n",
+              "      <td>4111.000000</td>\n",
+              "      <td>88.000000</td>\n",
+              "      <td>250.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        total_runs         out  numberofballs     average  strikerate\n",
+              "count   516.000000  516.000000     516.000000  482.000000  516.000000\n",
+              "mean    430.625969   17.063953     335.645349   16.355074  105.433442\n",
+              "std     882.275431   28.124511     663.593679   11.146222   39.633938\n",
+              "min       0.000000    0.000000       1.000000    0.000000    0.000000\n",
+              "25%      15.000000    2.000000      17.000000    8.000000   84.362069\n",
+              "50%      74.000000    5.500000      68.000000   14.607143  111.651584\n",
+              "75%     340.500000   18.000000     290.000000   23.657609  130.499036\n",
+              "max    5426.000000  161.000000    4111.000000   88.000000  250.000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vnVjsBzGxLoi",
+        "outputId": "7de71200-3e88-4ab0-8dfa-ad0bf7a7e297",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "most_runs_average_strikerate_df.info()"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 516 entries, 0 to 515\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column         Non-Null Count  Dtype  \n",
+            "---  ------         --------------  -----  \n",
+            " 0   batsman        516 non-null    object \n",
+            " 1   total_runs     516 non-null    int64  \n",
+            " 2   out            516 non-null    int64  \n",
+            " 3   numberofballs  516 non-null    int64  \n",
+            " 4   average        482 non-null    float64\n",
+            " 5   strikerate     516 non-null    float64\n",
+            "dtypes: float64(2), int64(3), object(1)\n",
+            "memory usage: 24.3+ KB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U3WTscydxTZS"
       },
       "source": [
         ""
